# MistralSpeechToText

./: .env.example  .gitignore  LICENSE  MistralSTT.spec  README.md  app.py  audio.py  build_app.sh  config.py  credentials.py  history.py  indicator.py  inserter.py  make_icon.py  mistral_stt.py  pyproject.toml  setup_signing.sh  transcribe.py
assets/: AppIcon.icns
launchd/: com.mistral-stt.plist
