[project]
name = "mistral-speech-to-text"
version = "0.1.0"
description = "Local, minimalist push-to-talk speech-to-text for macOS via Mistral Voxtral"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "mistralai>=1.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
