[project]
name = "mistral-speech-to-text"
version = "0.1.0"
description = "Local, minimalist push-to-talk speech-to-text for macOS via Mistral Voxtral"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "mistralai>=1.0",
    "httpx>=0.27",
    # truststore fait valider le TLS par le trousseau macOS : indispensable
    # derriere un proxy d'entreprise (Cato/Zscaler) dont le certificat racine
    # est installe dans le Keychain mais pas connu de certifi.
    "truststore>=0.9",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-ServiceManagement>=10.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
# Outils de packaging de la .app macOS (mode dev uniquement). PyInstaller est
# choisi plutot que py2app car il supporte le Python "standalone" fourni par uv
# (py2app exige un Python framework) et embarque proprement PortAudio
# (sounddevice), pydantic et certifi via ses hooks.
dev = [
    "pyinstaller>=6.0",
]

[tool.uv]
package = false
